--- a/pom.xml
+++ b/pom.xml
@@ -240,14 +240,12 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
-			<version>4.12</version>
+			<version>4.13.1</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/net.authorize/anet-java-sdk -->
 		<dependency>
-			<groupId>net.authorize</groupId>
-			<artifactId>anet-java-sdk</artifactId>
-			<version>2.0.1</version>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 	</dependencies>
 
