Completed the zookeeper ansible scripts.

--- a/ansible/roles/opendatapolicing_zookeeper/defaults/main.yml
+++ b/ansible/roles/opendatapolicing_zookeeper/defaults/main.yml
@@ -9,9 +9,10 @@ ZOOKEEPER_REPO: https://github.com/apache/zookeeper.git
 ZOOKEEPER_VERSION: 3.6.1
 ZOOKEEPER_TAG: "release-{{ZOOKEEPER_VERSION}}"
 ZOOKEEPER_PORT: 2181
-ZOOKEEPER_MIRROR_URL: https://apache.claz.org/zookeeper
+ZOOKEEPER_MIRROR_URL: https://archive.apache.org/dist/zookeeper
 ZOOKEEPER_DOWNLOAD_FILENAME: "apache-{{ ZOOKEEPER_NAME }}-{{ ZOOKEEPER_VERSION }}-bin.tar.gz"
-ZOOKEEPER_DOWNLOAD_URL: "{{ ZOOKEEPER_MIRROR_URL }}/zookeeper-3.6.2/{{ ZOOKEEPER_DOWNLOAD_FILENAME }}"
+ZOOKEEPER_DOWNLOAD_URL: "{{ ZOOKEEPER_MIRROR_URL }}/zookeeper-{{ ZOOKEEPER_VERSION }}/{{ ZOOKEEPER_DOWNLOAD_FILENAME }}"
 ZOOKEEPER_DOWNLOAD_DEST: "/tmp/{{ ZOOKEEPER_DOWNLOAD_FILENAME }}"
+ZOOKEEPER_DOWNLOAD_SHA512: 1c5cb4d9886fae41bf244a446dd874b73c0fff7a5fc2dda4305041964420cde21e59b388dfd2551464a46bb6918d9d3c3c01ebe68fdbe782074ee360aa830c7d
 target: opendatapolicing_zookeeper
 
