--- a/ansible/opendatapolicing_zookeeper.yml
+++ b/ansible/opendatapolicing_zookeeper.yml
@@ -2,6 +2,8 @@
 - name: Install zookeeper as a service on the target. 
   gather_facts: no
   hosts: "{{ target }}"
+  vars_files: 
+    - "vaults/{{ VAULT_ID }}"
   roles:
     - opendatapolicing_zookeeper
 
