--- a/ansible/roles/opendatapolicing_solr/tasks/main.yml
+++ b/ansible/roles/opendatapolicing_solr/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install {{SOLR_NAME}} dependencies. 
   package:
-    name: [git,java-latest-openjdk-devel,java-latest-openjdk,npm]
+    name: [git,java-latest-openjdk-devel,java-latest-openjdk]
   become: yes
 - name: Create the {{SOLR_NAME}} source directory {{SOLR_SRC}}. 
   file:
@@ -35,16 +35,6 @@
     repo: "{{COMPUTATE_REPO}}"
     dest: "{{COMPUTATE_SRC}}"
   when: computate_pom.stat.exists == False
-- name: Bootstrap the solr source code
-  shell: (JAVA_HOME={{JAVA_HOME}} ant ivy-bootstrap)
-  args:
-    chdir: "{{SOLR_SRC}}/solr"
-    creates: "~/.ant/lib/ivy-2.4.0.jar"
-- name: Build the {{SOLR_NAME}} application. 
-  shell: (JAVA_HOME={{JAVA_HOME}} ant package)
-  args:
-    chdir: "{{SOLR_SRC}}/solr"
-    creates: "{{SOLR_SRC}}/{{SOLR_NAME}}/build/{{SOLR_NAME}}-{{SOLR_VERSION}}-SNAPSHOT"
 - name: Create the {{SOLR_NAME}} install directory {{SOLR_OPT}}. 
   file:
     name: "{{SOLR_OPT}}"
@@ -53,9 +43,11 @@
     group: "{{USER_NAME}}"
   become: yes
 - name: Install {{SOLR_NAME}} into the {{SOLR_OPT}} install directory. 
-  shell: mv {{SOLR_SRC}}/{{SOLR_NAME}}/build/{{SOLR_NAME}}-{{SOLR_VERSION}}-SNAPSHOT/* {{SOLR_OPT}}
-  args:
-    creates: "{{SOLR_OPT}}/bin"
+  unarchive: 
+    src: "{{ SOLR_DOWNLOAD_DEST }}"
+    dest: "{{ SOLR_OPT }}"
+    remote_src: yes
+    extra_opts: [--strip-components=1]
 - name: Create the {{SOLR_NAME}} data directory {{SOLR_DATA}}. 
   file:
     name: "{{SOLR_DATA}}"
