--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
 	<dependencies>
 
+		<!-- Apache Commons -->
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
@@ -48,16 +49,22 @@
 			<artifactId>commons-text</artifactId>
 			<version>1.8</version>
 		</dependency>
+
+		<!-- PostgreSQL Database -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.2.2.jre7</version>
 		</dependency>
+
+		<!-- Apache Solr Search Engine -->
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
 			<version>8.4.1</version>
 		</dependency>
+
+		<!-- PDF Generation -->
 		<dependency>
 			<groupId>org.xhtmlrenderer</groupId>
 			<artifactId>flying-saucer-core</artifactId>
@@ -84,7 +91,14 @@
 			<version>5.2.0</version>
 		</dependency>
 
+		<!-- Graph Generation -->
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.0</version>
+		</dependency>
 
+		<!-- Vert.X -->
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-codec-http</artifactId>
@@ -120,7 +134,6 @@
 			<artifactId>netty-transport-native-epoll</artifactId>
 			<version>4.1.45.Final</version>
 		</dependency>
-
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
@@ -192,7 +205,6 @@
 			<artifactId>vertx-codegen</artifactId>
 			<version>${vertx.version}</version>
 			<scope>provided</scope>
-			<!--<classifier>processor</classifier> -->
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
@@ -224,21 +236,19 @@
 			<artifactId>opentracing-solr-client</artifactId>
 			<version>0.1.0</version>
 		</dependency>
+
+		<!-- Unit Testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 			<version>4.13.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.jfree</groupId>
-			<artifactId>jfreechart</artifactId>
-			<version>1.5.0</version>
-		</dependency>
 	</dependencies>
 
 	<build>
 
+		<!-- Source Directory Configuration -->
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -246,37 +256,6 @@
 		</resources>
 
 		<plugins>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
-				<version>1.0.0</version>
-				<executions>
-					<execution>
-						<phase>initialize</phase>
-						<goals>
-							<goal>read-project-properties</goal>
-						</goals>
-						<configuration>
-							<files>
-								<file>/opt/keystore/opendatapolicing-keystore.properties</file>
-							</files>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<annotationProcessors>
-						<annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
-					</annotationProcessors>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -298,9 +277,44 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- Read Project Properties -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0.0</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>/opt/keystore/opendatapolicing-keystore.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Vert.X Code Generation -->
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<annotationProcessors>
+						<annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
+					</annotationProcessors>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<profiles>
+
+		<!-- OpenShift Code Signing Plugins -->
 		<profile>
 			<id>openshift</id>
 			<build>
