--- a/opendatapolicing_install_project.yml
+++ b/opendatapolicing_install_project.yml
@@ -6,22 +6,18 @@
     GITHUB_ORG: "{{ PROJECT_NAME }}"
     PROJECT_REPO: "git@github.com:{{ PROJECT_NAME }}/{{ PROJECT_NAME }}.git"
     PROJECT_SRC: "{{ playbook_dir }}"
-  roles:
-#    - computate.computate_postgres
-#    - computate.computate_zookeeper
-#    - computate.computate_solr
-#    - role: computate.computate_project
-#      PROJECT_JAVA_PACKAGE: com.opendatapolicing.enus
-#      PROJECT_SERVICES: 
-#        - PROJECT_NAME: "{{ PROJECT_NAME }}-rp"
-#          PROJECT_SRC: "{{ playbook_dir }}/{{ PROJECT_NAME }}-rp"
-#          PROJECT_JAVA_PACKAGE: com.redhat.rhedar
   tasks: 
+#    - include_role:
+#        name: computate.computate_postgres
+#    - include_role:
+#        name: computate.computate_zookeeper
+#    - include_role:
+#        name: computate.computate_solr
     - include_role:
         name: computate.computate_project
       vars: 
         PROJECT_JAVA_PACKAGE: com.opendatapolicing.enus
         PROJECT_SERVICES: 
           - PROJECT_NAME: "{{ PROJECT_NAME }}"
-            PROJECT_SRC: "{{ playbook_dir }}/{{ PROJECT_NAME }}"
+            PROJECT_SRC: "{{ playbook_dir }}"
             PROJECT_JAVA_PACKAGE: com.opendatapolicing.enus
